# llama

./: .gitignore  .replit  Cargo.toml  README.md  ]  deny.toml  flake.nix  result  test.lm  test.txt  test2.lm  test2.txt
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1xsi6qcazzxck2qrfirp5zrq7wh4g9p4-source  4c6i5y1h2b7h13z1sza23dk22rsq4nkc-source  rg7as7qnky3blnfg73ahd71wqkpq4s4q-source  x5h4s2mfv9dhv5njzzp4xqxanmrb4wx0-source
crates/llamac/: Cargo.toml
crates/llamac/src/: cli.rs  main.rs
crates/llamac_ast/: Cargo.toml
crates/llamac_ast/src/: expr.rs  stmt.rs
crates/llamac_codegen_chez/: Cargo.toml
crates/llamac_codegen_chez/src/: lib.rs
crates/llamac_codegen_r6rs/: Cargo.toml
crates/llamac_codegen_r6rs/src/: lib.rs
crates/llamac_parser/: Cargo.toml
crates/llamac_parser/src/: error.rs  expr.rs  item.rs  lexer.rs  lib.rs  stmt.rs
crates/llamac_sexpr_fmt/: Cargo.toml
crates/llamac_sexpr_fmt/llamac_sexpr_fmt_derive/: Cargo.toml
crates/llamac_typecheck/: Cargo.toml
crates/llamac_typecheck/src/: infer_expr.rs  infer_stmt.rs  lib.rs  match_exhaustivity.rs  subst_stmt.rs
crates/llamac_typed_ast/: Cargo.toml
crates/llamac_typed_ast/src/: expr.rs  lib.rs
crates/llamac_utils/: Cargo.toml
examples/: test3.lm  test4.lm  test5.lm  test6.lm
llamac/: Cargo.toml
llamac/src/: main.rs
llamac_ast/: Cargo.toml  test.lm
llamac_ast/src/: expr.rs  lib.rs  stmt.rs  utils.rs
llamac_parser/: Cargo.toml
llamac_parser/src/: error.rs  expr.rs  item.rs  lexer.rs  lib.rs  stmt.rs
llamac_sexpr_fmt/: Cargo.toml  helix
llamac_sexpr_fmt/llamac_sexpr_fmt_derive/: Cargo.toml
llamac_sexpr_fmt/llamac_sexpr_fmt_derive/src/: lib.rs
llamac_sexpr_fmt/src/: lib.rs
llamac_typecheck/: Cargo.toml
llamac_typecheck/src/: error.rs  expr.rs  infer.rs  infer_expr.rs  infer_stmt.rs  lib.rs  match_exhaustivity.rs  stmt.rs  subst_expr.rs  ty.rs
llamac_typecheck/src/typed_ast/: expr.rs  stmt.rs
llamac_typed_ast/: Cargo.toml
llamac_typed_ast/src/: expr.rs  lib.rs  stmt.rs
llamac_utils/: Cargo.toml
llamac_utils/src/: lib.rs
src/: ast.rs  lexer.rs  lib.rs  main.rs  utils.rs
src/parser/: error.rs  expr.rs  mod.rs  stmt.rs
src/typecheck/: mod.rs  type_hints.lm
src/vm/: mod.rs  value.rs
