[package]
name = "llama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
lto = "off"
codegen-units = 4

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
logos = "0.12"
derive_more = "0.99"
ariadne = "0.1"
lexical = { version = "^6.0", features = ["parse-floats", "parse-integers"] }
pathdiff = "0.2"
# clap = "3"
