[workspace]
resolver = "2"
members = [
  "llamac",
  "llamac_ast",
  "llamac_parser",
  "llamac_sexpr_fmt",
  "llamac_typecheck",
  "llamac_typed_ast",
  "llamac_utils",
]
metadata.crane.name = "llama"

[workspace.package]
version = "0.1.0"
authors = ["Jawad Ahmed <jawad.w.ahmed@gmail.com>"]
license = "MIT OR Apache-2.0"
