[package]
name = "llamac"
version = "0.1.0"
authors = ["Jawad Ahmed <jawad.w.ahmed@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
llamac_utils = { path = "../llamac_utils" }
llamac_ast = { path = "../llamac_ast" }
llamac_parser = { path = "../llamac_parser" }
llamac_typed_ast = { path = "../llamac_typed_ast" }
llamac_typecheck = { path = "../llamac_typecheck" }
